base/app-example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-example
  labels:
    app.kubernetes.io/name: app-example
    app.kubernetes.io/managed-by: argocd
